tests/NormalTests/paczka2/big_fuzzy/10183946.err
Error in line 4: YPewnug20 A964 97,7
Error in line 10: A964 A964 18,5
Error in line 15: PfoivI6ezD A964 453,5
Error in line 27: cD4Q A535 93,2
Error in line 37: YPewnug20 A964 47,1
Error in line 41: cD4Q S895 258,9
Error in line 42: cD4Q S128 26,0
Error in line 6: JVhMsOo S895 5,0
Error in line 48: cD4Q S895 299,8
Error in line 56: cD4Q S128 45,6
Error in line 57: PfoivI6ezD A964 95,0
Error in line 63: 0zXEFg4hF A964 56,1
Error in line 70: cD4Q S895 98,7
Error in line 74: PfoivI6ezD S89k 379,8
Error in line 62: JVhMsOo A535 96,6
Error in line 78: JVhMsOo S895 0,8
Error in line 85: JVhMsOo A535 74,9
Error in line 86: 4wQv S895 12,5
Error in line 84: A964 S895 79,0
Error in line 91: 0zXEFg4hF S895 5,0
Error in line 73: PfoivI6ezD S895 87,5
Error in line 95: PfoivI6ezD S128 8,5
Error in line 93: 0zXEFg4hF A535 3,9
Error in line 98: 0zXEFg4hF S895 52,1
Error in line 112: 0zXEFg4hF A964 11,0
Error in line 110: YPewnug20 A535 10,9
Error in line 121: YPewnug20 S128 72,1
Error in line 122: YPewnug20 A964 14,5
Error in line 126: A964 A535 1,3
Error in line 125: 4wQv A535 208,1
Error in line 146: A964 S895 30,0
Error in line 144: 4wQv S895 25,2
Error in line 156: A964 A535 71,4
Error in line 160: A964 S128 58,0
Error in line 157: YPewnug20 A964 68,2
Error in line 164: 0zXEFg4hF S128 18,2
Error in line 174: 0zXEFg4hF A964 100,0
Error in line 166: 4wQv A535 31,3
Error in line 181: 0zXEFg4hF S128 52,4
Error in line 187: A964 S895 22,5
Error in line 202: YPewnug20 A535 68,8
Error in line 198: cD4Q S128 39,4
Error in line 227: JVhMsOo S128 7,9
Error in line 226: cD4Q A964 7,9
Error in line 246: JVhMsOo S128 12,4
Error in line 248: PfoivI6ezD A964 29,96
Error in line 249: JVhMsOo S128 78,29
Error in line 245: YPewnug20 S128 29,1
